--- a/app/src/main/res/layout/activity_knew_us.xml
+++ b/app/src/main/res/layout/activity_knew_us.xml
@@ -1,9 +1,245 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activites.KnewUsActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        android:id="@+id/KnewUs-toolbar"
+        layout="@layout/toolbar" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="180dp"
+            android:layout_marginRight="180dp"
+            android:gravity="center"
+            android:text="تعرف علينا"
+            android:textColor="@color/white"
+
+            android:textSize="@dimen/dimen_text_20"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="16dp" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <VideoView
+        android:id="@+id/main-Vedio"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/KnewUs-toolbar"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp" />
+
+    <ScrollView
+        android:id="@+id/Scroll1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/main-Vedio">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/KnewUs_LL1"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICOne_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus1"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICTwo_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus2"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/KnewUs_LL2"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_below="@id/KnewUs_LL1"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICThree_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus3"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICFour_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus4"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/KnewUs_LL3"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_below="@id/KnewUs_LL2"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICFive_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus5"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICSix_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus6"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/KnewUs_LL4"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_below="@id/KnewUs_LL3"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICSeven_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus7"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICEight_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus8"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/KnewUs_LL5"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_below="@id/KnewUs_LL4"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICNine_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus9"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/KnewUs_PICTen_IV"
+                    android:layout_width="140dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rectangleredshape"
+                    android:src="@drawable/knewus10"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </ScrollView>
+
+
+    <ImageView
+        android:layout_width="@dimen/dimen_50"
+        android:layout_height="@dimen/dimen_50"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/dimen_text_20"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="@dimen/dimen_text_20"
+        android:src="@drawable/back_icon" />
+
+</RelativeLayout>
