--- a/app/src/main/res/layout/activity_my_card.xml
+++ b/app/src/main/res/layout/activity_my_card.xml
@@ -58,24 +58,24 @@
     <Button
         android:id="@+id/MYCard_confirmBuying_BT"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/dimen_50"
         android:layout_marginStart="@dimen/album_dp_40"
         android:layout_marginTop="@dimen/album_dp_20"
         android:layout_marginEnd="@dimen/album_dp_40"
         android:background="@drawable/red_button"
         android:text="@string/OK"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_text_25"
+        android:textSize="@dimen/dimen_text_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Card_TotalPrice" />
 
     <ImageView
         android:id="@+id/MYCard_Back_IB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="50dp"
+        android:layout_height="@dimen/dimen_50"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="92dp"
         android:shadowColor="#41ff4800"
         android:src="@drawable/back_icon"
