--- a/app/src/main/res/layout/activity_send_order.xml
+++ b/app/src/main/res/layout/activity_send_order.xml
@@ -46,7 +46,7 @@
                 android:layout_marginStart="@dimen/dimen_text_25"
                 android:layout_marginTop="@dimen/dimen_16"
                 android:layout_marginEnd="@dimen/dimen_text_25"
-                android:background="@drawable/rectangleshape"
+                android:background="@drawable/rectangleredshape"
                 android:src="@drawable/animal_example2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,10 +194,10 @@
                 android:id="@+id/WriteYourNotes_ET"
                 android:layout_width="350dp"
                 android:layout_height="@dimen/dimen_90"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginStart="@dimen/dimen_8"
+                android:layout_marginLeft="@dimen/dimen_8"
+                android:layout_marginEnd="@dimen/dimen_8"
+                android:layout_marginRight="@dimen/dimen_8"
                 android:background="@drawable/rectangleredshape"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -210,19 +210,21 @@
                 android:text="@string/OrderTotal"
                 android:textColor="@color/red"
                 android:textSize="@dimen/dimen_text_25"
+                android:layout_marginTop="@dimen/album_dp_10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/WriteYourNotes_ET" />
 
             <Button
                 android:id="@+id/AddToCard_BT"
-                android:layout_width="200dp"
+                android:layout_width="@dimen/album_dp_200"
                 android:layout_height="@dimen/dimen_50"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/dimen_8"
+                android:layout_marginLeft="@dimen/dimen_8"
+                android:layout_marginTop="@dimen/album_dp_10"
                 android:background="@drawable/red_button"
                 android:text="@string/AddToCard"
+
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_text_25"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -231,8 +233,8 @@
 
             <ImageView
                 android:id="@+id/AddToCard_Back_IB"
-                android:layout_width="67dp"
-                android:layout_height="79dp"
+                android:layout_width="@dimen/dimen_50"
+                android:layout_height="@dimen/dimen_50"
                 android:shadowColor="#41ff4800"
                 android:src="@drawable/back_icon"
                 app:layout_constraintStart_toStartOf="parent"
