--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -26,7 +26,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-
                 android:layout_marginEnd="172dp"
                 android:layout_marginRight="172dp"
                 android:fontFamily="@font/cairo"
@@ -71,19 +70,20 @@
                         android:layout_marginTop="10dp"
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:id="@+id/Services_ServiceTWO_PIC_IV"
                         android:layout_width="140dp"
                         android:layout_height="100dp"
-
                         android:layout_margin="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example2"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
@@ -108,7 +108,8 @@
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example"
 
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:id="@+id/Services_ServiceFour_PIC_IV"
@@ -117,10 +118,10 @@
                         android:layout_margin="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
-
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example2"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
@@ -141,11 +142,11 @@
                         android:layout_width="140dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="10dp"
-
                         android:layout_marginTop="10dp"
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:id="@+id/Services_ServiceSix_PIC_IV"
@@ -154,10 +155,10 @@
                         android:layout_margin="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
-
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example2"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
@@ -181,9 +182,9 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/rectangleredshape"
-
                         android:src="@drawable/animal_example"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:id="@+id/Services_ServiceEight_PIC_IV"
@@ -192,10 +193,10 @@
                         android:layout_margin="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
-
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example2"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
@@ -219,9 +220,9 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/rectangleredshape"
-
                         android:src="@drawable/animal_example"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:id="@+id/Services_ServicTen_PIC_IV"
@@ -230,10 +231,9 @@
                         android:layout_margin="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
-                        android:background="@drawable/rectangleredshape"
-
-                        android:src="@drawable/animal_example2"
-                        android:textAlignment="center" />
+                        android:background="@drawable/rectangleredshape" android:src="@drawable/animal_example2"
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
@@ -256,7 +256,8 @@
                         android:layout_marginTop="10dp"
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageView
                         android:layout_width="140dp"
@@ -266,8 +267,8 @@
                         android:layout_marginEnd="10dp"
                         android:background="@drawable/rectangleredshape"
                         android:src="@drawable/animal_example2"
-
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginRight="10dp" />
 
 
                 </LinearLayout>
