--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -3,44 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-  android:layout_height="match_parent">
+    android:layout_height="match_parent">
 
- <RelativeLayout
-     android:id="@+id/Main_RL"
+    <RelativeLayout
+        android:id="@+id/Main_RL"
         android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/album_dp_20"
-        android:layout_height="@dimen/album_dp_200">
+        android:layout_height="200dp"
+        android:layout_marginTop="@dimen/dimen_text_20">
 
 
-     <ImageView
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/album_dp_200"
-         android:src="@drawable/dialog1" />
+        <ImageView
+            android:id="@+id/Dialog_background"
+            android:layout_marginStart="@dimen/dimen_16"
+            android:layout_marginEnd="@dimen/dimen_16"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:src="@drawable/dialog1" />
+
+        <TextView
+            android:id="@+id/Dialg_TV"
+            android:layout_below="@id/Dialog_background"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Dialog"
+            android:gravity="center"
+            android:layout_marginTop="-140dp"
+            android:layout_marginStart="140dp"
+            android:textSize="@dimen/dimen_text_25"
+            android:textColor="@color/white"
+            android:layout_marginEnd="140dp" />
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Dialg_TV"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="80dp" />
 
 
     </RelativeLayout>
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/Dialod_RateNow_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/Dialog"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_text_25"
-            tools:layout_editor_absoluteX="47dp"
-            tools:layout_editor_absoluteY="46dp" />
-
-        <RatingBar
-            android:id="@+id/PutYourStars_Rate"
-            android:layout_width="287dp"
-            android:layout_height="63dp"
-            android:layout_marginTop="128dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="47dp" />
-    </android.support.constraint.ConstraintLayout>
-
 </RelativeLayout>
