--- a/app/src/main/res/layout/dialog_done_order.xml
+++ b/app/src/main/res/layout/dialog_done_order.xml
@@ -7,43 +7,45 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/album_dp_200"
-        android:layout_marginTop="@dimen/album_dp_20">
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp">
 
 
         <ImageView
+            android:id="@+id/DialogDone_IV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/album_dp_200"
+            android:layout_height="200dp"
             android:src="@drawable/dialog1" />
+
+        <TextView
+            android:id="@+id/DialogDone_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/DialogDone_IV"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="-150dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="@string/DialogDone"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_text_25" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/DialogDone_TV"
+            android:layout_marginStart="140dp"
+            android:layout_marginLeft="140dp"
+            android:layout_marginTop="@dimen/dimen_text_20"
+            android:src="@drawable/back_icon" />
 
 
     </RelativeLayout>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/Constrain_Main_Dialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/MainMsgShowInDialof_TV"
-            android:layout_width="335dp"
-            android:gravity="center"
-            android:layout_height="88dp"
-            android:fontFamily="@font/cairo"
-            android:text="@string/DialogDone"
-            android:textColor="@color/white"
-            android:textSize="@dimen/album_dp_30"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="51dp" />
-
-        <ImageView
-            android:id="@+id/Back_DialogOrder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="164dp"
-            android:src="@drawable/back_icon"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="162dp" />
-    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
+
+
+
